Fixed a type and added an overflow option to the CSS.

--- a/secret-agent.css
+++ b/secret-agent.css
@@ -19,6 +19,8 @@ body
     border: 1px solid #25AE3A;
     
     background-color: black;
+    
+    overflow: hidden;
 }
 
 input
